--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Implementation of hilbert curve in javaScript",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.12.3",
     "canvas": "^1.2.1",
     "color": "^0.8.0",
+    "express": "^4.12.3",
     "gulp": "^3.8.11",
     "interpolating-polynomial": "^1.1.2",
     "lerp": "^1.0.3",
